syntax = "proto3";

package api.server;

option go_package = "server/api/server;server";
option java_multiple_files = true;
option java_package = "api.server";

service Server {
	rpc CreateServer (CreateServerRequest) returns (CreateServerReply);
	rpc UpdateServer (UpdateServerRequest) returns (UpdateServerReply);
	rpc DeleteServer (DeleteServerRequest) returns (DeleteServerReply);
	rpc GetServer (GetServerRequest) returns (GetServerReply);
	rpc ListServer (ListServerRequest) returns (ListServerReply);
}

message CreateServerRequest {}
message CreateServerReply {}

message UpdateServerRequest {}
message UpdateServerReply {}

message DeleteServerRequest {}
message DeleteServerReply {}

message GetServerRequest {}
message GetServerReply {}

message ListServerRequest {}
message ListServerReply {}